syntax = "proto3";

package slumber.api.v1;

import "google/api/annotations.proto";

option go_package = "github.com/dihedron/slumber/command/api";

service VMControl {
  rpc Start(StartRequest) returns (StartResponse) {
    option (google.api.http) = {
      post: "/v1/vm/start"
      body: "*"
    };
  }
  rpc Stop(StopRequest) returns (StopResponse) {
    option (google.api.http) = {
      post: "/v1/vm/stop"
      body: "*"
    };
  }
  rpc Pause(PauseRequest) returns (PauseResponse) {
    option (google.api.http) = {
      post: "/v1/vm/pause"
      body: "*"
    };
  }
  rpc Unpause(UnpauseRequest) returns (UnpauseResponse) {
    option (google.api.http) = {
      post: "/v1/vm/unpause"
      body: "*"
    };
  }
  rpc Status(StatusRequest) returns (StatusResponse) {
    option (google.api.http) = {
      get: "/v1/vm/status"
    };
  }
}

message StartRequest {
  string userid = 1;
}

message StartResponse {
  string message = 1;
  string status = 2;
}

message StopRequest {
  string userid = 1;
}

message StopResponse {
  string message = 1;
  string status = 2;
}

message PauseRequest {
  string userid = 1;
}

message PauseResponse {
  string message = 1;
  string status = 2;
}

message UnpauseRequest {
  string userid = 1;
}

message UnpauseResponse {
  string message = 1;
  string status = 2;
}

message StatusRequest {
  string userid = 1;
}

message StatusResponse {
  string status = 1;
  string message = 2;
}
